| Bug #6840 | Default value is not checked in ALTER column SET DEFAULT 'x' | ||
|---|---|---|---|
| Submitted: | 26 Nov 2004 9:18 | Modified: | 7 Dec 2004 10:10 |
| Reporter: | Alexander Barkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.x | OS: | |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[7 Dec 2004 8:58]
Sergei Glukhov
ChangeSet 1.2136 04/12/07 Fix for bug #6840: Default value is not checked in ALTER column SET DEFAULT 'x'
[7 Dec 2004 10:10]
Sergei Glukhov
Fixed in 4.1 source tree

Description: ALTER TABLE t1 ALTER enum_or_set_column SET DEFAULT 'non existent value'; doesn't produce an error. How to repeat: create table t1 (a enum('x','y') default 'x'); alter table t1 alter a set default 'z'; show create table t1; The default values is set to an empty string.