Fix for bug #6840:  Default value is not checked in ALTER column SET DEFAULT 'x'